--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "homepage": "https://github.com/chaeaw/YoutubeClone#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "mongoose": "^7.3.0",
     "morgan": "^1.10.0",
     "pug": "^3.0.2"
   },
