[#013 update] model.find(): promise 사용
- 불러올 model들이 점점 늘어나면 server.js의 import가 복잡해지니 init.js(초기화)에 분리해놓음.
- model.find() : 데이터 검색, 전에는 콜백함수도 가능했으나 mongoose의 현재 버전은 불가능해짐. 따라서 promise(비동기)를 사용해야 한다.
- async(req, res) => { await model.find() } 같은 형식으로 작성.
- promise 사용시 error를 잡기 위해선 try {} catch(error) {} 를 사용!

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Youtube Clone Coding with NomadCoders",
   "scripts": {
-    "dev": "nodemon --exec babel-node src/server"
+    "dev": "nodemon --exec babel-node src/init.js"
   },
   "repository": {
     "type": "git",
