--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongoose": "^7.3.0",
     "morgan": "^1.10.0",
     "pug": "^3.0.2"
@@ -26,6 +27,6 @@
     "@babel/core": "^7.22.1",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.22.4",
-    "nodemon": "^1.14.9"
+    "nodemon": "^2.0.22"
   }
 }
